<resources>
    <string name="txtDatos">Nuevo cliente</string>
    <string name="hint_cliente">Cliente</string>
    <string name="hint_clientes">Clientes</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_direccion">Direccion</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_email">Email@hotmail.com</string>
    <string name="button_guardar">Guardar</string>
    <string name="menu_nuevo">Nuevo</string>
    <string name="menu_nuevo_cliente">Nuevo Cliente</string>
    <string name="title_activity_splash">splash_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>