<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_contacto"
            tools:srcCompat="@drawable/ic_contacto" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="3dp">

            <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre"
            android:textSize="34sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_apellido"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_direccion"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_email"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_dni"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_telefono"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
    </RelativeLayout>